cabal-version:       >=1.10

name:                cis552-persistent
version:             0.1.0.0
license-file:        LICENSE
maintainer:          sweirich@cis.upenn.edu
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     RedBlack
                     , Queue
  build-depends:       base >=4.13 && <4.14
                     , QuickCheck
  default-language:    Haskell2010
